[gd_scene load_steps=7 format=3 uid="uid://c8akq5qtgnqp6"]

[ext_resource type="Script" uid="uid://bb2a368iguur2" path="res://scripts/game/skills/modifiers/skill_modifier_component.gd" id="1_skill_modifier"]
[ext_resource type="Script" uid="uid://b3rwgaw23bwga" path="res://scripts/game/skills/triggers/skill_cooldown_component.gd" id="2_cooldown"]
[ext_resource type="Script" uid="uid://q8jjmgp243sc" path="res://scripts/game/skills/projectile/projectile_skill_component.gd" id="3_projectile_skill"]
[ext_resource type="PackedScene" uid="uid://bb122ptv84wjc" path="res://scenes/skills/arrow/arrow_projectile.tscn" id="4_arrow_projectile"]
[ext_resource type="Script" uid="uid://d4ikhw448kwck" path="res://scripts/game/skills/triggers/skill_trigger_area.gd" id="5_trigger"]

[sub_resource type="CircleShape2D" id="CircleShape2D_trigger"]
radius = 200.0

[node name="ArrowSkill" type="Node2D"]

[node name="SkillModifierComponent" type="Node" parent="."]
script = ExtResource("1_skill_modifier")

[node name="SkillCooldownComponent" type="Node" parent="." node_paths=PackedStringArray("skill_modifier")]
script = ExtResource("2_cooldown")
cooldown_time = 1.5
skill_modifier = NodePath("../SkillModifierComponent")
skill_id = "arrow"

[node name="ProjectileSkillComponent" type="Node" parent="." node_paths=PackedStringArray("skill_modifier", "cooldown", "trigger_area")]
script = ExtResource("3_projectile_skill")
skill_modifier = NodePath("../SkillModifierComponent")
cooldown = NodePath("../SkillCooldownComponent")
trigger_area = NodePath("../SkillTriggerArea")
projectile_scene = ExtResource("4_arrow_projectile")
action_label = "arrow_attack"

[node name="SkillTriggerArea" type="Area2D" parent="." node_paths=PackedStringArray("cooldown")]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("5_trigger")
detection_radius = 200.0
cooldown = NodePath("../SkillCooldownComponent")
require_direction = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SkillTriggerArea"]
shape = SubResource("CircleShape2D_trigger")
